--- a/app/src/main/res/layout/activity_licence_verify.xml
+++ b/app/src/main/res/layout/activity_licence_verify.xml
@@ -1,100 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".LicenceVerify">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".LicenceVerify">
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_centerInParent="true">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
 
         <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center"
-                android:src="@drawable/square_logo"
-                android:adjustViewBounds="true"/>
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:src="@drawable/square_logo" />
 
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="Cloud App Sync"
-                  android:textStyle="bold"
-                  android:textColor="@color/offBlack"
-                  android:textSize="25sp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:text="Cloud App Sync"
+            android:textColor="@color/offBlack"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:text="Licence Verification"
-                  android:textStyle="normal"
-                  android:textColor="@color/grey"
-                  android:textSize="20sp"
-                  android:layout_marginTop="15dp"
-        android:layout_gravity="center"/>
-
-        <EditText
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:padding="10dp"
-                android:layout_marginTop="50dp"
-                android:layout_gravity="center"
-                android:background="@drawable/edittext_ring"
-                android:hint="Company ID"
-                android:textColorHint="@color/fadeGrey"
-                android:textColor="?attr/textColor"
-                android:textSize="18sp"
-                android:id="@+id/companyId"
-                android:gravity="center"
-                android:inputType="text"
-                android:ellipsize="start"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:text="Licence Verification"
+            android:textColor="@color/grey"
+            android:textSize="20sp"
+            android:textStyle="normal" />
 
         <EditText
-                android:id="@+id/licenceKey"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/edittext_ring"
-                android:gravity="center"
-                android:hint="Licence Key"
-                android:inputType="text"
-                android:padding="10dp"
-                android:textColor="?attr/textColor"
-                android:textColorHint="@color/fadeGrey"
-                android:textSize="18sp" />
+            android:id="@+id/companyId"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/edittext_ring"
+            android:ellipsize="start"
+            android:gravity="center"
+            android:hint="Company ID"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textColor="?attr/textColor"
+            android:textColorHint="@color/fadeGrey"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/licenceKey"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/edittext_ring"
+            android:gravity="center"
+            android:hint="Licence Key"
+            android:inputType="text"
+            android:padding="10dp"
+            android:textColor="?attr/textColor"
+            android:textColorHint="@color/fadeGrey"
+            android:textSize="18sp" />
 
         <RelativeLayout
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center"
-                android:background="@drawable/buttons"
-                android:animateLayoutChanges="true"
-                android:layout_marginTop="50dp"
-                android:id="@+id/verifyButton">
+            android:id="@+id/verifyButton"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:animateLayoutChanges="true"
+            android:background="@drawable/buttons">
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:gravity="center"
-                    android:text="Verify"
-                    android:textSize="15sp"
-                    android:textColor="?attr/buttonTextColor"
-                    android:id="@+id/verifyText"/>
+                android:id="@+id/verifyText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="Verify"
+                android:textColor="?attr/buttonTextColor"
+                android:textSize="15sp" />
 
             <ProgressBar
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:theme="@style/ProgressTheme"
-                    android:layout_centerInParent="true"
-                    android:id="@+id/verifyProgress"
-                    android:visibility="gone"/>
+                android:id="@+id/verifyProgress"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerInParent="true"
+                android:theme="@style/ProgressTheme"
+                android:visibility="gone" />
 
         </RelativeLayout>
 
