--- a/app/src/main/res/drawable/button_ring.xml
+++ b/app/src/main/res/drawable/button_ring.xml
@@ -7,7 +7,7 @@
             <solid android:color="@color/transparent"/>
             <corners android:radius="15dp"/>
             <stroke
-                android:color="@color/black"
+                android:color="?attr/textColor"
                 android:width="2dp"/>
         </shape>
     </item>
