--- a/app/src/main/res/layout/activity_all_schedules.xml
+++ b/app/src/main/res/layout/activity_all_schedules.xml
@@ -56,7 +56,7 @@
                 android:text="Clear All"
                 android:textStyle="bold"
                 android:textSize="13sp"
-                android:textColor="@color/black"
+                android:textColor="?attr/textColor"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:paddingTop="5dp"
